feat：增加mapboxgl热力图组件

--- a/src/demos/carouselTable/CarouselTable.less
+++ b/src/demos/carouselTable/CarouselTable.less
@@ -7,13 +7,10 @@
 }
 .table {
   width: 100%;
-  :deep {
-    .index {
-      background-color: fade(#ddd, 10);
-    }
-
-    .age {
-      background-color: fade(red, 10);
-    }
+  :deep(.index) {
+    background-color: fade(#ddd, 10);
+  }
+  :deep(.age) {
+    background-color: fade(red, 10);
   }
 }
