--- a/src/demos/mapboxGl/components/mapboxglHeatmap/MapboxglHeatmap.less
+++ b/src/demos/mapboxGl/components/mapboxglHeatmap/MapboxglHeatmap.less
@@ -1,6 +1,12 @@
 /** @format */
 
-.mapDom {
+.map-layout {
   width: 100%;
   height: 400px;
+  position: relative;
+  z-index: 0;
+  .mapDom {
+    width: 100%;
+    height: 400px;
+  }
 }
