feat：增加 - Modal

--- a/src/demos/modal/Modal.less
+++ b/src/demos/modal/Modal.less
@@ -1,166 +1,12 @@
 /** @format */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-@carousel-horizontal-width: 100%;
 
-@carousel-vertical-height: 150px;
-
-:deep(.carousel) {
-  .slick-slide {
-    font-size: 0;
-  }
-}
-
-.content {
-  .card {
-    margin-bottom: 20px;
-  }
-}
-
-.swiper-item {
-  position: relative;
-  z-index: 0;
-
-  margin: 0 auto;
-  .title {
-    font-size: 14px;
-    line-height: 22px;
-
-    position: absolute;
-    z-index: 1;
-    bottom: 0;
-    left: 0;
-
-    width: 100%;
-    height: 22px;
-    padding: 0 10px;
-  }
-}
-
-@swiper-horizontal-single-width: 300px;
-@swiper-horizontal-single-height: 150px;
-// 水平(单个)轮播
-.swiper-horizontal-single {
-  .swiper-slide-horizontal-single {
-    .swiper-item-horizontal-single {
-      width: @swiper-horizontal-single-width;
-      height: @swiper-horizontal-single-height;
-      .image {
-        width: @swiper-horizontal-single-width;
-        height: @swiper-horizontal-single-height;
-      }
-    }
-  }
-  .swiper-prev,
-  .swiper-next {
-    position: absolute;
-    z-index: 1;
-    top: 70px;
-    font-size: 24px;
-  }
-  .swiper-prev {
-    left: 0;
-  }
-  .swiper-next {
-    right: 0;
-  }
-}
-
-@swiper-horizontal-multiple-width: 100px;
-@swiper-horizontal-multiple-height: 150px;
-.swiper-horizontal-multiple {
-  .swiper-slide-horizontal-multiple {
-    .swiper-item-horizontal-multiple {
-      width: @swiper-horizontal-multiple-width;
-      height: @swiper-horizontal-multiple-height;
-      .image {
-        width: @swiper-horizontal-multiple-width;
-        height: @swiper-horizontal-multiple-height;
-      }
-    }
-  }
-  .swiper-prev,
-  .swiper-next {
-    position: absolute;
-    z-index: 1;
-    top: 70px;
-    font-size: 24px;
-  }
-  .swiper-prev {
-    left: 0;
-  }
-  .swiper-next {
-    right: 0;
-  }
-}
-
-@swiper-vertical-single-width: 300px;
-@swiper-vertical-single-height: 150px;
-.swiper-vertical-single {
-  width: @swiper-vertical-single-width;
-  height: @swiper-vertical-single-height;
-  .swiper-slide-vertical-single {
-    .swiper-item-vertical-single {
-      width: @swiper-vertical-single-width;
-      height: @swiper-vertical-single-height;
-      .image {
-        width: @swiper-vertical-single-width;
-        height: @swiper-vertical-single-height;
-      }
-    }
-  }
-}
-
-@swiper-vertical-multiple-width: 300px;
-@swiper-vertical-multiple-height: 150px;
-.swiper-vertical-multiple {
-  width: @swiper-vertical-multiple-width;
-  height: @swiper-vertical-multiple-height;
-  .swiper-slide-vertical-multiple {
-    .swiper-item-vertical-multiple {
-      width: @swiper-vertical-multiple-width;
-      height: calc(@swiper-vertical-multiple-height / 3 - 10px);
-      .image {
-        width: @swiper-vertical-multiple-width;
-        height: calc(@swiper-vertical-multiple-height / 3 - 10px);
-      }
-    }
-  }
-}
-
-@swiper-grid-width: 300px;
-@swiper-grid-height: 150px;
-.swiper-grid {
-  width: @swiper-grid-width;
-  height: @swiper-grid-height;
-  .swiper-slide-grid {
-    .swiper-item-grid {
-      width: calc(@swiper-grid-width / 3 - 10px);
-      height: calc(@swiper-grid-height / 2 - 10px);
-      .image {
-        width: calc(@swiper-grid-width / 3 - 10px);
-        height: calc(@swiper-grid-height / 2 - 10px);
-      }
-    }
-  }
-}
-
-@swiper-card-width: 150px;
-@swiper-card-height: 150px;
-.swiper-card {
-  width: 300px;
-  height: @swiper-card-height;
-  .swiper-slide-card {
-    width: @swiper-card-width;
-    height: @swiper-card-width;
-    .swiper-item-card {
-      width: @swiper-card-width;
-      height: @swiper-card-width;
-      .image {
-        width: @swiper-card-width;
-        height: @swiper-card-width;
-      }
-    }
-  }
+.modal {
+  width: 1440px;
+  height: 800px;
+  background-color: #fff;
+  position: absolute;
+  z-index: 1;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
